[package]
name = "link-screee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19" }
bimap = { version = "0.6.3", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.175" }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
